cabal-version: 3.8

name:         chainweb-node
version:      2.29.1
synopsis:     A Proof-of-Work Parallel-Chain Architecture for Massive Throughput
description:  A Proof-of-Work Parallel-Chain Architecture for Massive Throughput.
homepage:     https://github.com/kadena-io/chainweb
bug-reports:  https://github.com/kadena-io/chainweb/issues
license:      BSD-3-Clause
license-file: LICENSE
author:       Chainweb Dev Team
maintainer:   chainweb-dev@kadena.io
copyright:    Copyright (C) 2018 - 2024 Kadena LLC
category:     Blockchain, Currency, Bitcoin, Kadena
build-type:   Custom

tested-with:
    GHC == 9.10
    GHC == 9.8
    GHC == 9.6

extra-source-files:
    CHANGELOG.md
    README.md
    LICENSE

source-repository head
    type: git
    location: https://github.com/kadena-io/chainweb-node.git

flag ed25519
    description:
        Use ED25519 certificates; depends on the master branch of the tls
        package.
    default: False
    manual: True

flag debug
    description:
        Enable various debugging features
    default: False
    manual: True

flag ghc-flags
    description: Enable ghc dumps of .ghc.flags and .ghc.version for tooling
    default: False
    manual: True

common debugging-flags
    if flag(debug)
        ghc-options:
            -g
        cpp-options:
            -DDEBUG_MULTINODE_TEST=1

common warning-flags
    ghc-options:
        -Wall
        -Werror
        -Wcompat
        -Wpartial-fields
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Widentities
        -funclutter-valid-hole-fits
        -fmax-relevant-binds=0

        -- This needed because -Werror and missing-home-modules causes
        -- problems with ghci.
        -Wno-missing-home-modules

custom-setup
    setup-depends:
        , Cabal >= 3.8
        , base >= 4.12 && < 5
        , bytestring >= 0.10.12
        , directory >= 1.3
        , filepath >= 1.4
        , process >= 1.5

-- -------------------------------------------------------------------------- --
-- Chainweb Node Application
-- -------------------------------------------------------------------------- --

-- The application that runs an chainweb node
--
executable chainweb-node
    import: warning-flags, debugging-flags

    default-language: Haskell2010
    ghc-options:
        -threaded
        "-with-rtsopts=-N -H1G -A64M --disable-delayed-os-memory-return"
        -rtsopts
    hs-source-dirs: src
    main-is: ChainwebNode.hs
    c-sources: c/rlim_utils.c
    other-modules:
        Paths_chainweb_node
        PkgInfo
        Utils.CheckRLimits
        Utils.InstallSignalHandlers
    autogen-modules:
        Paths_chainweb_node
        PkgInfo
    build-depends:
        -- internal
        , chainweb

        -- external
        , async >= 2.2
        , base >= 4.12 && < 5
        , chainweb-storage >= 0.1
        , configuration-tools >= 0.6
        , deepseq >= 1.4
        , directory >= 1.3
        , filepath >= 1.4
        , http-client >= 0.5
        , http-client-tls >=0.3
        , lens >= 4.17
        , loglevel >= 0.1
        , managed >= 1.0
        , streaming >= 0.2
        , text >= 2.0
        , time >= 1.12.2
        , yet-another-logger >= 0.4.1

    if !os(windows)
        build-depends:
            unix >= 2.7

