cabal-version: 3.0
name: chainweb-storage
version: 0.1.0.0
synopsis: Key Value Storage for Chainweb
description:
    Various tools for key value stores used in
    chainweb (https://github.com/kadena-io/chainweb-node
homepage: https://github.com/kadena-io/chainweb-storage
bug-reports: https://github.com/kadena-io/chainweb-storage/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lars@kadena.io
copyright: Copyright (c) 2024, Kadena LLC
category: Data
tested-with:
    GHC==9.0.1
    GHC==8.10.4
    GHC==8.8.4

source-repository head
    type: git
    location: https://github.com/kadena-io/chainweb-storage.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Chainweb.Storage.Table
        Chainweb.Storage.Table.Forgetful
        Chainweb.Storage.Table.HashMap
        Chainweb.Storage.Table.RocksDB
        Chainweb.Storage.DedupStore
    build-depends:
        , base >=4.10 && <5
        , bytestring >=0.10
        , containers >=0.5
        , cryptonite >= 0.25
        , directory >=1.3
        , filepath
        , deepseq >=1.4
        , exceptions >=0.10
        , hashable >=1.2
        , lens >=4.16
        , memory >=0.14
        , mtl >= 2.2
        , nothunks >= 0.1.0.0
        , rocksdb-haskell-kadena >=1.1.0
        , stm >=2.4
        , streaming >=0.2
        , temporary >=1.3
        , text >=1.2
        , transformers >=0.5
        , unordered-containers >=0.2
        , vector >=0.12

test-suite chainweb-storage-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: Main.hs
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    other-modules:
    build-depends:
        -- internal
        , chainweb-storage

        -- external
        , async >=2.2
        , base >=4.10 && <5
        , bytestring >=0.10
        , exceptions >=0.10
        , lens >=4.16
        , nothunks >= 0.1.0.0
        , vector >=0.12
