cabal-version: 2.2

name:         chain2gexf
version:      1.0.0
synopsis:     Convert a persisted Chainweb into .gexf format for viewing.
description:  Convert a persisted Chainweb into .gexf format for viewing.
author:       Chainweb Dev Team
maintainer:   lars@kadena.io
copyright:    Copyright (C) 2018 Kadena LLC
category:     Blockchain, Currency, Bitcoin
build-type:   Simple

executable chain2gexf
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
    hs-source-dirs: ./ ../../node
    main-is: Chain2Gexf.hs
    other-modules:
        Utils.Gexf
    build-depends:
        -- internal
          chainweb

        -- external
        , aeson >= 1.4
        , base
        , bytestring
        , errors >= 2.3
        , lens >= 4.16
        , optparse-applicative >= 0.14
        , paths >= 0.2
        , resourcet >= 1.2
        , streaming >= 0.2
        , text
        , unordered-containers >= 0.2
        , xmlgen >= 0.6
