cabal-version: 2.2

name:         ea
version:      1.0.0
synopsis:     Generate legal genesis blocks, as well as their payloads.
description:  Eru Ilúvatar spoke "Eä", creating the heavens and the earth.
              Eä means "to be" in Quenya, the ancient language of Tolkien's elves.
author:       Chainweb Dev Team
maintainer:   colin@kadena.io
copyright:    Copyright (C) 2019 Kadena LLC
category:     Blockchain, Currency, Bitcoin
build-type:   Simple

executable ea
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
    default-extensions: NoImplicitPrelude
    hs-source-dirs: ./
    main-is: Ea.hs
    build-depends:
        -- internal
          chainweb
        , pact

        -- external
        , aeson
        , aeson-pretty >= 0.8
        , base
        , base-prelude >= 1.3
        , bytes >= 0.15
        , bytestring >= 0.10
        , containers >= 0.5
        , loglevel >= 0.1
        , optparse-generic >= 1.3
        , text >= 1.2
        , vector >= 0.12
        , yaml >= 0.8
