cabal-version: 2.2

name:         genesis-payload
version:      1.0.0
synopsis:     Generate a Haskell module containing the Genesis Block Payload.
description:  Generate a Haskell module containing the Genesis Block Payload.
author:       Chainweb Dev Team
maintainer:   colin@kadena.io
copyright:    Copyright (C) 2019 Kadena LLC
category:     Blockchain, Currency, Bitcoin
build-type:   Simple

executable genesis-payload
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
    hs-source-dirs: ./
    main-is: GenPayload.hs
    build-depends:
        -- internal
          chainweb

        -- external
        , aeson >= 1.4
        , aeson-pretty >= 0.8
        , base
        , bytestring
        , containers
        , pact
        , text
        , yaml
