cabal-version: 2.2

name:         mine-genesis
version:      1.1.0
synopsis:     Generate a legal genesis block.
description:  Generate a legal genesis block.
author:       Chainweb Dev Team
maintainer:   colin@kadena.io
copyright:    Copyright (C) 2019 Kadena LLC
category:     Blockchain, Currency, Bitcoin
build-type:   Simple

executable mine-genesis
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
    hs-source-dirs: ./
    main-is: MineGenesis.hs
    build-depends:
        -- internal
          chainweb

        -- external
        , aeson-pretty >= 0.8
        , base
        , bytes >= 0.15
        , bytestring >= 0.10
        , generic-lens >= 1.1
        , lens >= 4.16
        , optparse-generic >= 1.3
        , pretty-simple >= 2.1
        , text >= 1.2
        , yaml >= 0.8
